[metadata]
name = refl_package
version = 0.1
author = Nicola Farmer
author_email = nicola.farmer@diamond.ac.uk
description = A package to create priors for reflectometry analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://https://github.com/nf679/refl_package
project_urls =
    Docs = https://refl-package.readthedocs.io/en/latest/
    Database = https://https://github.com/nf679/refl-database
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = refl_package